--- a/Documentation/Settings.yml
+++ b/Documentation/Settings.yml
@@ -20,4 +20,5 @@ conf.py:
     preamble: \usepackage{typo3}
   latex_use_parts: True
   latex_show_pagerefs: True
+  latex_logo: ../Images/configuration-object-icon@large.png
 ...
