--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   },
   "require-dev": {
     "mikey179/vfsStream": "1.4.*@dev",
-    "phpunit/phpunit": "^5.6",
+    "phpunit/phpunit": "^4.7 || ^5.6",
     "satooshi/php-coveralls": "dev-master"
   },
   "autoload": {
