--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "object",
     "model"
   ],
-  "license": "GPL-3.0+",
+  "license": "GPL-3.0-or-later",
   "authors": [
     {
       "name": "Romain Canon",
