--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   ],
   "require": {
     "php": ">=5.5",
-    "typo3/cms": "^6.2 || ^7.6 || ^8.7"
+    "typo3/cms-core": "^6.2 || ^7.6 || ^8.7 || ^9.5"
   },
   "require-dev": {
     "mikey179/vfsStream": "^1.6",
