--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,12 @@ php:
   - 5.5
   - 5.6
   - 7.0
+  - 7.2
 
 env:
   - TYPO3_VERSION=^6.2 COVERAGE=0
   - TYPO3_VERSION=^7.6 COVERAGE=0
+  - TYPO3_VERSION=^8.7 COVERAGE=0
 
 matrix:
   include:
@@ -16,6 +18,9 @@ matrix:
     # TYPO3 v8 requires PHP v7+
   - env: TYPO3_VERSION=^8.7 COVERAGE=0
     php: 7.0
+    # TYPO3 v8 requires PHP v7+
+  - env: TYPO3_VERSION=^9.5 COVERAGE=0
+    php: 7.2
   exclude:
     # We must exclude TYPO3 6.2 with PHP 7, because the build just doesn't work (have no clue why).
   - env: TYPO3_VERSION=^6.2 COVERAGE=0
