--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "mikey179/vfsStream": "^1.6",
     "phpunit/phpunit": "^4.7 || ^5.6",
     "satooshi/php-coveralls": "^1.0",
-    "nimut/testing-framework": "^1.0"
+    "nimut/testing-framework": "^1.0 || ^4.1"
   },
   "autoload": {
     "psr-4": {
