--- a/.travis.yml
+++ b/.travis.yml
@@ -1,39 +1,15 @@
 language: php
 
 php:
-  - 5.5
-  - 5.6
-  - 7.0
   - 7.2
-
-env:
-  - TYPO3_VERSION=^6.2 COVERAGE=0
-  - TYPO3_VERSION=^7.6 COVERAGE=0
-  - TYPO3_VERSION=^8.7 COVERAGE=0
+  - 7.3
 
 matrix:
   include:
-  - env: TYPO3_VERSION=^7.6 COVERAGE=1
-    php: 7.0
-    # TYPO3 v8 requires PHP v7+
-  - env: TYPO3_VERSION=^8.7 COVERAGE=0
-    php: 7.0
-    # TYPO3 v8 requires PHP v7+
+  - env: TYPO3_VERSION=^9.5 COVERAGE=1
+    php: 7.2
   - env: TYPO3_VERSION=^9.5 COVERAGE=0
-    php: 7.2
-  exclude:
-    # Excluding this matrix, because the same one with coverage enabled is included above.
-  - env: TYPO3_VERSION=^7.6 COVERAGE=0
-    php: 7.0
-
-  - env: TYPO3_VERSION=^6.2 COVERAGE=0
-    php: 7.0
-  - env: TYPO3_VERSION=^6.2 COVERAGE=0
-    php: 7.2
-  - env: TYPO3_VERSION=^8.7 COVERAGE=0
-    php: 5.5
-  - env: TYPO3_VERSION=^8.7 COVERAGE=0
-    php: 5.6
+    php: 7.3
 
 sudo: false
 
@@ -51,7 +27,7 @@ before_install:
   - composer --version
 
 before_script:
-  - composer require typo3/cms=$TYPO3_VERSION
+  - composer require typo3/minimal=$TYPO3_VERSION
   - git checkout composer.json
   - export TYPO3_PATH_WEB=$PWD/.Build/Web
   - mkdir -p build/logs
