--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
     }
   ],
   "require": {
-    "php": ">=5.5",
+    "php": "^7.1",
     "typo3/cms-core": "^9.5"
   },
   "require-dev": {
     "mikey179/vfsStream": "^1.6",
     "satooshi/php-coveralls": "^1.0",
-    "nimut/testing-framework": "^1.0 || ^4.1"
+    "typo3/testing-framework": "^4.0"
   },
   "autoload": {
     "psr-4": {
