--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ matrix:
   include:
   - env: TYPO3_VERSION=^9.5 COVERAGE=1
     php: 7.2
+  exclude:
   - env: TYPO3_VERSION=^9.5 COVERAGE=0
     php: 7.3
 
