--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     "psr-4": {
       "Romm\\ConfigurationObject\\Tests\\": "Tests",
       "TYPO3\\CMS\\Core\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/core/Tests/",
-      "TYPO3\\CMS\\Fluid\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/fluid/Tests/"
+      "TYPO3\\CMS\\Fluid\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/fluid/Tests/",
+      "TYPO3\\CMS\\Beuser\\": ".Build/vendor/typo3/cms/typo3/sysext/beuser/Classes/"
     }
   },
   "replace": {
