--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,19 @@
 language: php
 
 php:
-  - 5.5
-  - 5.6
-  - 7.0
+  - 7.2
+  - 7.3
 
 env:
-  - TYPO3_VERSION=^6.2 COVERAGE=0
-  - TYPO3_VERSION=^7.6 COVERAGE=0
+  - TYPO3_VERSION=^9.5 COVERAGE=0
 
 matrix:
   include:
-  - env: TYPO3_VERSION=^7.6 COVERAGE=1
-    php: 7.0
-    # TYPO3 v8 requires PHP v7+
-  - env: TYPO3_VERSION=^8.7 COVERAGE=0
-    php: 7.0
+  - env: TYPO3_VERSION=^9.5 COVERAGE=1
+    php: 7.2
   exclude:
-    # We must exclude TYPO3 6.2 with PHP 7, because the build just doesn't work (have no clue why).
-  - env: TYPO3_VERSION=^6.2 COVERAGE=0
-    php: 7.0
-    # Excluding this matrix, because the same one with coverage enabled is included above.
-  - env: TYPO3_VERSION=^7.6 COVERAGE=0
-    php: 7.0
+  - env: TYPO3_VERSION=^9.5 COVERAGE=0
+    php: 7.2
 
 sudo: false
 
@@ -40,7 +31,7 @@ before_install:
   - composer --version
 
 before_script:
-  - composer require typo3/cms=$TYPO3_VERSION
+  - composer require typo3/minimal=$TYPO3_VERSION
   - git checkout composer.json
   - export TYPO3_PATH_WEB=$PWD/.Build/Web
   - mkdir -p build/logs
