--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,14 @@
     }
   ],
   "require": {
-    "php": ">=5.5",
-    "typo3/cms": "^6.2 || ^7.6 || ^8.7"
+    "php": "^7.1",
+    "typo3/cms-core": "^9.5",
+    "typo3/cms-beuser": "^9.5"
   },
   "require-dev": {
     "mikey179/vfsStream": "^1.6",
-    "phpunit/phpunit": "^4.7 || ^5.6",
     "satooshi/php-coveralls": "^1.0",
-    "nimut/testing-framework": "^1.0"
+    "typo3/testing-framework": "^4.0"
   },
   "autoload": {
     "psr-4": {
@@ -32,9 +32,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Romm\\ConfigurationObject\\Tests\\": "Tests",
-      "TYPO3\\CMS\\Core\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/core/Tests/",
-      "TYPO3\\CMS\\Fluid\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/fluid/Tests/"
+      "Romm\\ConfigurationObject\\Tests\\": "Tests"
     }
   },
   "replace": {
