--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
   "require-dev": {
     "mikey179/vfsStream": "^1.6",
     "satooshi/php-coveralls": "^1.0",
-    "typo3/testing-framework": "^6.8"
+    "typo3/testing-framework": "^6.8",
+    "phpspec/prophecy-phpunit": "^2.0"
   },
   "autoload": {
     "psr-4": {
