--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "typo3/cms-beuser": "^10.4"
   },
   "require-dev": {
-    "mikey179/vfsStream": "^1.6",
+    "mikey179/vfsstream": "^1.6",
     "satooshi/php-coveralls": "^1.0",
     "typo3/testing-framework": "^6.8",
     "phpspec/prophecy-phpunit": "^2.0"
